# ico_for_extension

./: Cargo.toml  README.md  del_icon_cache.bat  set.reg
src/: lib.rs  main.rs  utils.rs
