[package]
name = "set-ico"
version = "1.2.0"
edition = "2021"
authors = ["keating55"]
description = "A utility to setting ico ICONS for different extension files."
repository = "https://github.com/Keating55/set-ico.git"
readme = "README.md"
license = "Apache"

[dependencies]
winreg = "0.52"
clap = { version = "4", features = ["derive"] }